Fixed alignment in toolbars

--- a/packages/exmg-grid/src/styles/exmg-grid-base-toolbar-styles.scss
+++ b/packages/exmg-grid/src/styles/exmg-grid-base-toolbar-styles.scss
@@ -14,15 +14,16 @@ $exmg-grid-toolbar-active-color: #000000;
   background-color: var(--toolbar-bg-color);
   color: var(--toolbar-color);
 
-  border-radius: var(--exmg-theme-table-toolbar-border-top-radius, 0) var(--exmg-theme-table-toolbar-border-top-radius, 0)
-    var(--exmg-theme-table-toolbar-border-bottom-radius, 0) var(--exmg-theme-table-toolbar-border-bottom-radius, 0);
+  border-radius: var(--exmg-theme-table-toolbar-border-top-radius, 0)
+    var(--exmg-theme-table-toolbar-border-top-radius, 0) var(--exmg-theme-table-toolbar-border-bottom-radius, 0)
+    var(--exmg-theme-table-toolbar-border-bottom-radius, 0);
 }
 .wrapper {
   display: flex;
   flex: 1;
   flex-direction: row;
   align-items: center;
-  padding: 10px 0;
+  padding: 10px 16px 10px 0;
 
   overflow-x: var(--exmg-theme-table-toolbar-overflow-x, initial);
   white-space: nowrap;
@@ -45,7 +46,7 @@ $exmg-grid-toolbar-active-color: #000000;
     }
   }
   .seperator {
-    min-height:32px;
+    min-height: 32px;
     &.with-action-separator {
       border-left: 1px solid var(--active-toolbar-color);
     }
@@ -60,7 +61,7 @@ $exmg-grid-toolbar-active-color: #000000;
 }
 
 .actions {
-  padding: 0 16px;
+  padding: 0 16px 0 16px;
   color: var(--mdc-theme-primary);
 }
 
@@ -68,17 +69,12 @@ $exmg-grid-toolbar-active-color: #000000;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  padding: 0 16px;
 }
 
 .settings {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-
-  &.has-settings {
-    padding-right: 16px;
-  }
 }
 
 @media (max-width: 500px) {
